--- a/BlazorApp/Components/Pages/EventViewer.razor
+++ b/BlazorApp/Components/Pages/EventViewer.razor
@@ -30,7 +30,7 @@
 
 <h3>EventViewer</h3>
 
-<button @onclick="sendTestEmail">send test email</button>
+<button class="btn btn-secondary"@onclick="NavToMatches">View Matches from Event</button>
 
 
 
@@ -118,7 +118,7 @@
         </tr>
 
     </table>
-    <table class="table" style=" @table2Style caption-side: top; margin-right: auto; height: fit-content; flex-direction: column-reverse; transition: transform 0.5s ease;">
+    <table class="table" style=" display: none; caption-side: top; margin-right: auto; height: fit-content; flex-direction: column-reverse; transition: transform 0.5s ease;">
         <caption content="Matches In This Event" class="main-title" style=" height: auto; text-align: center !important; display: table-caption !important; font-family: 'Helvetica Neue',serif;  border-top-style: none; border-right: none">
             <h2>Matches In This Event</h2>
         </caption>
@@ -175,6 +175,9 @@
 
 @code {
 
+    public void NavToMatches() {
+        navManager.NavigateTo("/MatchViewer");
+    }
     /*vvvvvvvvvvvvvvvvvvvvNEW CODEvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv*/
     string eventLoadError = "";
     LinkedList<Match> matchListLocal;
@@ -641,7 +644,7 @@
         } 
         showMatchList(SelectedEventID,modelList);
         StateHasChanged();
-        //navManager.NavigateTo("/MatchViewer");
+        navManager.NavigateTo("/MatchViewer");
     }
 
     
