FINAL Draft MAIN FINAL 2.0

--- a/BlazorApp/Components/Layout/HeaderLayout.razor
+++ b/BlazorApp/Components/Layout/HeaderLayout.razor
@@ -3,7 +3,7 @@
 <div class="page">
     <main>
         <div class="top-row px-4">
-            <NavLink href="Home" style="color: white;">Back to Home</NavLink>
+            <NavLink href="/" style="color: white;">Home</NavLink>
             <h1 class="title"><img src="favicon.png" width="60" height="45" style="padding-right: 10px;">Mat Matchmaker</h1>
             <Dropdown>
                 <DropdownToggleButton Color="ButtonColor.Primary">
@@ -13,7 +13,7 @@
                     <DropdownItem To="/dashboard" Type="ButtonType.Link">Dashboard</DropdownItem>
                     <DropdownItem To="/roster" Type="ButtonType.Link">Manage Roster</DropdownItem>
                     <DropdownItem To="#" Type="ButtonType.Link">Settings</DropdownItem>
-                    <DropdownItem To="#" Type="ButtonType.Link">Log Out</DropdownItem>
+                    <DropdownItem To="/" Type="ButtonType.Link">Log Out</DropdownItem>
                 </DropdownMenu>
             </Dropdown>
         </div>
