--- a/BlazorApp/Components/Pages/Dashboard.razor
+++ b/BlazorApp/Components/Pages/Dashboard.razor
@@ -16,10 +16,10 @@
                     <div class="box">
                         <h1>Upcoming Event</h1>
                         <h2>University of Missouri</h2>
-                        <h3>April 16, 2024 at 4:00 PM </h3>
+                        <h3>May 16, 2024 at 12pm</h3>
                     </div>
                     <div class="nav-item px-3">
-                        <NavLink class="nav-link" href="EventCalendar">
+                        <NavLink class="nav-link" href="EventViewer">
                             <span class="bi bi-calendar-icon" aria-hidden="true"></span> Events
                         </NavLink>
                     </div>
