--- a/BlazorApp/Components/Pages/MatchViewer.razor
+++ b/BlazorApp/Components/Pages/MatchViewer.razor
@@ -30,30 +30,19 @@
         <tbody>
         @foreach (var item in matches.OrderBy(x => x.Order)) {
 
-            <tr style="@elementStyle" @key="item"  @ondragstart="() => { draggingMatch = item; displayColor(true); }" @ondragend="() => { draggingMatch = null; displayColor(false); }" draggable="true" @ondrop="() => HandleDrop(item)">
+            <tr style="@elementStyle" @key="item"  @ondragstart="() => { draggingMatch = item; displayColor(true); }"
+                @ondragend="() => { draggingMatch = null; displayColor(false); }" draggable="true" 
+                @ondrop="() => HandleDrop(item)">
 
                 <td style="@elementStyle">@(item.Order)</td>
-                <td style="@elementStyle">@item.Name@*.match[0].firstName</td>
-                        <td>@item.match[0].gender</td>
-                        <td>@item.match[0].weight</td>
-                        <td>@item.match[0].skill</td>
-                        <td>@item.match[0].grade*@</td>
-                <td><button style="height: 50%; vertical-align: bottom;" content="▼" @onclick="(()=> shiftDown(item))"></button><button style="height: 50%; vertical-align: top;" content="▲" @onclick="(()=> shiftUp(item))" ></button> </td>
-
-
-
-
+                <td style="@elementStyle">@item.Name</td>
+                <td><button style="height: 50%; vertical-align: bottom;" content="▼" @onclick="(()=> shiftDown(item))">▼</button>
+                    <button style="height: 50%; vertical-align: top;" content="▲" @onclick="(()=> shiftUp(item))" >▲</button> </td>
             </tr>
-
-
         }
-
         </tbody>
     </table>
-        </div>
-
-
-
+</div>
 
 
 @code {
